--- a/list/src/index.css
+++ b/list/src/index.css
@@ -1,10 +1,3 @@
-/* 
-const initialItems = [
-  { id: 1, description: "Passports", quantity: 2, packed: false },
-  { id: 2, description: "Socks", quantity: 12, packed: false },
-];
-*/
-
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
 * {
@@ -82,8 +75,7 @@ input {
   color: #ffebb3;
   padding: 4rem 0;
 
-  display: flex;
-  justify-content: space-between;
+
   flex-direction: column;
   gap: 3.2rem;
   align-items: center;
@@ -123,6 +115,7 @@ input[type="checkbox"] {
 }
 
 .list li button {
+  color:red;
   cursor: pointer;
   background: none;
   border: none;
